--- a/Up_Next_1/View/Base.lproj/Main.storyboard
+++ b/Up_Next_1/View/Base.lproj/Main.storyboard
@@ -49,15 +49,24 @@
                                 <color key="textColor" red="0.30196078430000001" green="0.83529411760000005" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Spotify_Logo_RGB_White" translatesAutoresizingMaskIntoConstraints="NO" id="jpD-qA-z8d">
+                                <rect key="frame" x="131" y="807" width="152" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="FR7-Lh-3IH"/>
+                                    <constraint firstAttribute="width" constant="152" id="vwP-9M-eTm"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.066666666669999999" green="0.0039215686269999999" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="tLk-H5-GN7" firstAttribute="trailing" secondItem="9xF-ci-fdG" secondAttribute="trailing" constant="162" id="4ox-Fl-JNt"/>
+                            <constraint firstItem="jpD-qA-z8d" firstAttribute="bottom" secondItem="tLk-H5-GN7" secondAttribute="bottom" id="6Om-Jh-Cgs"/>
                             <constraint firstItem="tLk-H5-GN7" firstAttribute="bottom" secondItem="9xF-ci-fdG" secondAttribute="bottom" constant="149" id="8Ft-cU-Zax"/>
                             <constraint firstItem="Ibj-M5-IWf" firstAttribute="top" secondItem="tLk-H5-GN7" secondAttribute="top" id="HwA-M7-OZp"/>
                             <constraint firstItem="9xF-ci-fdG" firstAttribute="leading" secondItem="tLk-H5-GN7" secondAttribute="leading" constant="162" id="It6-XV-uQM"/>
                             <constraint firstItem="Ibj-M5-IWf" firstAttribute="centerX" secondItem="dyF-ct-7za" secondAttribute="centerX" id="TaN-CT-KGA"/>
                             <constraint firstItem="zbU-gu-SM4" firstAttribute="centerX" secondItem="dyF-ct-7za" secondAttribute="centerX" id="XcG-5S-WRA"/>
+                            <constraint firstItem="jpD-qA-z8d" firstAttribute="centerX" secondItem="dyF-ct-7za" secondAttribute="centerX" id="pKY-pW-Vz8"/>
                             <constraint firstItem="zbU-gu-SM4" firstAttribute="centerY" secondItem="dyF-ct-7za" secondAttribute="centerY" id="v1z-QT-E1U"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="tLk-H5-GN7"/>
@@ -359,5 +368,8 @@
             <point key="canvasLocation" x="1762.3188405797102" y="126.5625"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Spotify_Logo_RGB_White" width="787" height="236"/>
+    </resources>
     <color key="tintColor" red="0.30196078430000001" green="0.83529411760000005" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
 </document>
